feat(js): created insertInfo() function.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
     <!-- MAIN -->
     <main>
-        <div id="teamContainer" class="cardContainer border border-warning mx-auto mt-5"></div>
+        <div id="teamContainer" class="cardContainer mx-auto d-flex flex-column">
+            
+        </div>
     </main>
     <script src="./Js/main.js"></script>
 </body>
